# aleph-alpha-client-rs

./: .env.example  .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Changelog.md  LICENSE  README.md  release-please-config.json
.github/workflows/: release-please.yml  release.yml  test.yml
src/: authentication.rs  chat.rs  completion.rs  detokenization.rs  explanation.rs  http.rs  image_preprocessing.rs  lib.rs  logprobs.rs  model.rs  prompt.rs  semantic_embedding.rs  sse.rs  stream.rs  tokenization.rs  tracing.rs
src/semantic_embedding/: embedding.rs  embedding_batch.rs  embedding_with_instruction.rs  mod.rs
tests/: integration.rs  unit.rs
