[package]
name = "aleph-alpha-client"
version = "0.24.0"
edition = "2021"
description = "Interact with large language models provided by the Aleph Alpha API in Rust code"
license = "MIT"
keywords = ["ai", "aleph-alpha", "llm"]
repository = "https://github.com/Aleph-Alpha/aleph-alpha-client-rs"
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.6"
base64 = "0.22.0"
dotenvy = "0.15.7"
futures-util = "0.3.31"
image = "0.25.1"
itertools = "0.14.0"
reqwest = { version = "0.12.3", features = ["json", "stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "2.0.0"
tokenizers = { version = "0.21.0", default-features = false, features = [
    "onig",
    "esaxx_fast",
] }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["rt", "macros"] }
wiremock = "0.6.0"
